# eve-media

./: .gitignore  .gitmodules  CMakeLists.txt  build.zig  root.zig
include/: App.h  ButtonClient.h  CountDownLatch.h  EyesState.h  EyesView.h  GpuC.h  ManageEyesStateUseCase.h  MediaClient.h  MediaClientC.h  MediaManager.h  MicAudioStreamingUseCase.h  MicButtonListenerUseCase.h  NetworkClient.h  NetworkClientC.h  Semaphore.h  Session.h  ShutdownListenerUseCase.h  SignalListenerUseCase.h  SpeakerAudioStreamingUseCase.h  Timer.h  main.h
lib/bcm2835/: bcm2835.c
lib/blend2d/lib/aarch64-linux-gnu/cmake/blend2d/: blend2d-config-release.cmake  blend2d-config.cmake
src/: App.cpp  ButtonClient.cpp  EyesView.cpp  ManageEyesStateUseCase.cpp  MediaClient.cpp  MediaManager.cpp  MicAudioStreamingUseCase.cpp  MicButtonListenerUseCase.cpp  NetworkClient.cpp  Session.cpp  ShutdownListenerUseCase.cpp  SignalListenerUseCase.cpp  SpeakerAudioStreamingUseCase.cpp  app.zig  binder.zig  bro.zig  button_client.zig  event_loop.zig  eyes.zig  main.cpp  main.zig  python_bindings.cpp  streaming.zig  thread_pool.zig  work_pool.zig
src/c/: GpuC.cpp  MediaClientC.cpp  NetworkClientC.cpp
src/ui/: animation.zig  synchronization.zig  view.zig
src/utils/: CountDownLatch.cpp  Semaphore.cpp  Timer.cpp
